# wikicounter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: ci.yaml  create_release.yaml
src/wikicounter/: counting.py  main.py  wiki_connection.py
tests/: conftest.py  counting_test.py  test_counting.py
tests/main/: get_root_endpoint_test.py  get_word_frequency_endpoint_test.py  post_kewords_endpoint_test.py
